--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "yap": "^0.0.2",
     "yup": "^0.32.11"
   },
